cmss/main/default/objects/Case/fields/IsSignatureVerified__c.field-meta.xml
<CustomField>
    <fullName>IsSignatureVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Verified</label>
    <type>Checkbox</type>
</CustomField>