cmss/main/default/objects/Case/fields/Migration_Premium_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Premium_Parent_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migration Premium Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>