cmss/main/default/objects/Case/fields/Migration_Premium_Product_List_Conf__c.field-meta.xml
<CustomField>
    <fullName>Migration_Premium_Product_List_Conf__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migration Premium Product List Conf</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>