cmss/main/default/objects/Case/fields/NewPortfolioManager__c.field-meta.xml
<CustomField>
    <fullName>NewPortfolioManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nový (požadovaný) správce</description>
    <label>New Portfolio Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NewPortfolioManagerCases</relationshipName>
    <type>Lookup</type>
</CustomField>