cmss/main/default/objects/Case/fields/OriginalOwner__c.field-meta.xml
<CustomField>
    <fullName>OriginalOwner__c</fullName>
    <label>Original Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>