cmss/main/default/objects/Case/fields/OriginalOwnerEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginalOwnerEmployeeNumber__c</fullName>
    <label>Original Owner Employee Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>