cmss/main/default/objects/Case/fields/OriginalRequestID__c.field-meta.xml
<CustomField>
    <fullName>OriginalRequestID__c</fullName>
    <description>Při klonování podání se do tohoto pole ukládá ID původního podání</description>
    <inlineHelpText>Při klonování podání se do tohoto pole ukládá ID původního podání</inlineHelpText>
    <label>Original Request ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>