cmss/main/default/objects/Case/fields/OwnerDepartment__c.field-meta.xml
<CustomField>
    <fullName>OwnerDepartment__c</fullName>
    <description>The department of the case owner (solver) got from its user record</description>
    <formula>Owner:User.Department</formula>
    <label>Owner Department</label>
    <type>Text</type>
</CustomField>