cmss/main/default/objects/Case/fields/PCF_Unfinished__c.field-meta.xml
<CustomField>
    <fullName>PCF_Unfinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCF Unfinished</label>
    <type>Checkbox</type>
</CustomField>