cmss/main/default/objects/Case/fields/PersonalIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonalIdentificationNumber__c</fullName>
    <description>Rodné číslo podávajícího</description>
    <label>Personal Identification Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>