cmss/main/default/objects/Case/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>Telefonní číslo podávajícího</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If account is selected, attribute is filled automatically after save</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>