cmss/main/default/objects/Case/fields/PostCodeID__c.field-meta.xml
<CustomField>
    <fullName>PostCodeID__c</fullName>
    <description>Adresa podávajícího - PSČ</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If account is selected, attribute is filled automatically after save</inlineHelpText>
    <label>Post Code ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>