cmss/main/default/objects/Case/fields/PrecautionNote__c.field-meta.xml
<CustomField>
    <fullName>PrecautionNote__c</fullName>
    <description>Komentář k opatření</description>
    <label>Precaution Note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>