cmss/main/default/objects/Case/fields/ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate__c</fullName>
    <description>Datum přijetí podání do ČMSS</description>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>