cmss/main/default/objects/Case/fields/ReceivedDatetime__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDatetime__c</fullName>
    <description>Datetime when the case was received. References Date field ReceivedDate__c and is used in Entitlements as a SLAProcessStartDate</description>
    <formula>IF( NOT( ISBLANK( ReceivedDate__c) ) , DATETIMEVALUE( ReceivedDate__c ) + 2, null)</formula>
    <label>Received Datetime</label>
    <type>DateTime</type>
</CustomField>