cmss/main/default/objects/Case/fields/ReceivingConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivingConfirmationDate__c</fullName>
    <description>Pole obsahující informaci kdy došlo k odeslání potvrzení o přijetí podání podávájícímu</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Receiving Confirmation Date</label>
    <type>Date</type>
</CustomField>