cmss/main/default/objects/Case/fields/ReceivingConfirmationNotSent__c.field-meta.xml
<CustomField>
    <fullName>ReceivingConfirmationNotSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It Will be checked after the user clicks on Receiving Confirmation Sent Action and doesn&apos;t fill Receiving Confirmation Date</description>
    <label>Receiving Confirmation Not Sent</label>
    <type>Checkbox</type>
</CustomField>