cmss/main/default/objects/Case/fields/RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>RegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Regionální manager (a zároveň schvalovatel, není-li zadavatelem centrála)</description>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RegionalManagerCases</relationshipName>
    <type>Lookup</type>
</CustomField>