cmss/main/default/objects/Case/fields/RegionalManagerAssistant__c.field-meta.xml
<CustomField>
    <fullName>RegionalManagerAssistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asistentnka regionálního managera (a zároveň 2. schvalovatel, není-li zadavatelem centrála)</description>
    <label>Regional Manager Assistant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RegionalManagerAssistantCases</relationshipName>
    <type>Lookup</type>
</CustomField>