cmss/main/default/objects/Case/fields/RemainingDays__c.field-meta.xml
<CustomField>
    <fullName>RemainingDays__c</fullName>
    <description>Calculates number of days (rounded down) that remains for Client Claim to be solved</description>
    <formula>IF( AND ( IsClientClaim__c, NOT( ISBLANK( ReceivedDate__c ) ), ISBLANK(  ResponseSent__c ) ), MFLOOR ( ReceivedDate__c + 30 - NOW() ), null )</formula>
    <label>Remaining Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>