cmss/main/default/objects/Case/fields/RemainingTime__c.field-meta.xml
<CustomField>
    <fullName>RemainingTime__c</fullName>
    <description>Calculates number of days (rounded down) that remains for Client Claim to be solved</description>
    <formula>IF(  AND( RecordType.DeveloperName = &#39;ClientClaim&#39;, NOT( ISBLANK( ReceivedDate__c) ) ),
          TEXT( FLOOR( ReceivedDate__c + 30 - NOW() ) ) &amp; &quot; d &quot; 
              &amp; TEXT( ABS( MFLOOR( MOD( ( ReceivedDate__c + 30 - NOW() ) * 24, 24) ) ) ) &amp; &quot; h&quot;,
          null )</formula>
    <label>Remaining Time</label>
    <type>Text</type>
</CustomField>