cmss/main/default/objects/Case/fields/RepeatedComplaint__c.field-meta.xml
<CustomField>
    <fullName>RepeatedComplaint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informace zda se jedná o opakované podání</description>
    <label>Repeated Complaint</label>
    <type>Checkbox</type>
</CustomField>