cmss/main/default/objects/Case/fields/reportCaseProcessingTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>reportCaseProcessingTimeFormula__c</fullName>
    <formula>IF(
				(ResponseSentDate__c - ReceivedDate__c) &lt;= 30   || 
				(ISBLANK(ResponseSentDate__c) &amp;&amp; ((ReceivedDate__c + 30) &gt;= (TODAY()))),
				&apos;v termínu&apos;,
				&apos;po termínu&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Processing Time Formula</label>
    <type>Text</type>
</CustomField>