cmss/main/default/objects/Case/fields/reportClientNotInformedInTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>reportClientNotInformedInTimeFormula__c</fullName>
    <description>Is Complaint and client was not informed in 5 work days.</description>
    <formula>IF(
				ISPICKVAL(Type, &apos;1&apos;) 
				&amp;&amp; 
				(ISPICKVAL(Status, &apos;1&apos;) || ISPICKVAL(Status, &apos;2&apos;))
				&amp;&amp;
				(
								(NOT(ISBLANK(ReceivingConfirmationDate__c)) &amp;&amp; (ReceivingConfirmationDate__c - ReceivedDate__c) &gt; 7)  
				    ||
								(ISBLANK(ReceivingConfirmationDate__c) &amp;&amp; NOT(ISBLANK(ResponseSentDate__c)) &amp;&amp; (ResponseSentDate__c - ReceivedDate__c) &gt; 7)
								||
								(ISBLANK(ReceivingConfirmationDate__c) &amp;&amp; (TODAY()- ReceivedDate__c)&gt;7))
				 ,1  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Not Informed In Time Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>