cmss/main/default/objects/Case/fields/reportClosedAndAuthorizedFormula__c.field-meta.xml
<CustomField>
    <fullName>reportClosedAndAuthorizedFormula__c</fullName>
    <description>Case.Status = 2 (Vyřešeno) and Complaint Legitimacy is 1</description>
    <formula>IF (ISPICKVAL(Status, &apos;2&apos;) &amp;&amp; ISPICKVAL(ComplaintLegitimacy__c, &apos;1&apos;),1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed And Authorized Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>