cmss/main/default/objects/Case/fields/reportCompensationAmountFormula__c.field-meta.xml
<CustomField>
    <fullName>reportCompensationAmountFormula__c</fullName>
    <formula>IF( ISPICKVAL(AccountingFundsType__c, &apos;1&apos;) &amp;&amp; CompensationAmount__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensation Amount Fromula</label>
    <type>Checkbox</type>
</CustomField>