cmss/main/default/objects/Case/fields/reportComplaintAuthorizedFormula__c.field-meta.xml
<CustomField>
    <fullName>reportComplaintAuthorizedFormula__c</fullName>
    <description>Complaint Legitimacy is 1 (Authorized)</description>
    <formula>IF(ISPICKVAL(ComplaintLegitimacy__c, &apos;1&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Authorized Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>