cmss/main/default/objects/Case/fields/reportComplaintsFinancialImpactFormula__c.field-meta.xml
<CustomField>
    <fullName>reportComplaintsFinancialImpactFormula__c</fullName>
    <description>Accounting Funds Type is  1 (škoda) and compensation Amount is bigger than 0.</description>
    <formula>IF( ISPICKVAL(AccountingFundsType__c, &apos;1&apos;) &amp;&amp; CompensationAmount__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaints Financial Impact Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>