cmss/main/default/objects/Case/fields/reportComplaintUnauthorizedFormula__c.field-meta.xml
<CustomField>
    <fullName>reportComplaintUnauthorizedFormula__c</fullName>
    <description>Complaint Legitimacy is 2 (Unauthorized)</description>
    <formula>IF(ISPICKVAL(ComplaintLegitimacy__c, &apos;2&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Unauthorized Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>