cmss/main/default/objects/Case/fields/reportComplaintUnspecifiedFormula__c.field-meta.xml
<CustomField>
    <fullName>reportComplaintUnspecifiedFormula__c</fullName>
    <description>Complaint Legitimacy is 3 (Unspecified)</description>
    <formula>IF(ISPICKVAL(ComplaintLegitimacy__c, &apos;3&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Unspecified Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>