cmss/main/default/objects/Case/fields/reportHighRiskFormula__c.field-meta.xml
<CustomField>
    <fullName>reportHighRiskFormula__c</fullName>
    <description>Priority is 2 (II.)</description>
    <formula>IF (ISPICKVAL(Priority, &apos;2&apos;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Risk Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>