cmss/main/default/objects/Case/fields/reportNotProcessedInTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>reportNotProcessedInTimeFormula__c</fullName>
    <description>Is complaint and Days of complaint solving is more than 30 days.</description>
    <formula>IF(ISPICKVAL(Type, &apos;1&apos;) &amp;&amp; DaysOfComplaintSolving__c &gt;30, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Processed In Time Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>