cmss/main/default/objects/Case/fields/reportObjectionToProcessingFormula__c.field-meta.xml
<CustomField>
    <fullName>reportObjectionToProcessingFormula__c</fullName>
    <formula>IF(INCLUDES(RequestType__c, &apos;4&apos;), &apos;Ano&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objection to Processing Formula</label>
    <type>Text</type>
</CustomField>