cmss/main/default/objects/Case/fields/reportProcessingRestrictionsFormula__c.field-meta.xml
<CustomField>
    <fullName>reportProcessingRestrictionsFormula__c</fullName>
    <formula>IF(INCLUDES(RequestType__c, &apos;7&apos;), &apos;Ano&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Restrictions Formula</label>
    <type>Text</type>
</CustomField>