cmss/main/default/objects/Case/fields/reportRequestForCorrectionFormula__c.field-meta.xml
<CustomField>
    <fullName>reportRequestForCorrectionFormula__c</fullName>
    <formula>IF(INCLUDES(RequestType__c, &apos;6&apos;), &apos;Ano&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request for Correction Formula</label>
    <type>Text</type>
</CustomField>