cmss/main/default/objects/Case/fields/reportRequestForDeletionFormula__c.field-meta.xml
<CustomField>
    <fullName>reportRequestForDeletionFormula__c</fullName>
    <formula>IF(INCLUDES(RequestType__c, &apos;2&apos;), &apos;Ano&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request for Deletion Formula</label>
    <type>Text</type>
</CustomField>