cmss/main/default/objects/Case/fields/reportRequestForInformationFormula__c.field-meta.xml
<CustomField>
    <fullName>reportRequestForInformationFormula__c</fullName>
    <formula>IF(INCLUDES(RequestType__c, &apos;1&apos;), &apos;Ano&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request for Information Formula</label>
    <type>Text</type>
</CustomField>