cmss/main/default/objects/Case/fields/reportTransferRequestFormula__c.field-meta.xml
<CustomField>
    <fullName>reportTransferRequestFormula__c</fullName>
    <formula>IF(INCLUDES(RequestType__c, &apos;5&apos;), &apos;Ano&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Request Formula</label>
    <type>Text</type>
</CustomField>