cmss/main/default/objects/Case/fields/reportWithdrawalOfConsentFormula__c.field-meta.xml
<CustomField>
    <fullName>reportWithdrawalOfConsentFormula__c</fullName>
    <formula>IF(INCLUDES(RequestType__c, &apos;3&apos;), &apos;Ano&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withdrawal of Consent Formula</label>
    <type>Text</type>
</CustomField>