cmss/main/default/objects/Case/fields/RequestComplete__c.field-meta.xml
<CustomField>
    <fullName>RequestComplete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Request Complete</label>
    <type>Checkbox</type>
</CustomField>