cmss/main/default/objects/Case/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>