cmss/main/default/objects/Case/fields/ResponseSent__c.field-meta.xml
<CustomField>
    <fullName>ResponseSent__c</fullName>
    <description>Pole obsahující informaci, kdy došlo k odeslání odpovědi na podání podávájícímu</description>
    <label>Response Sent</label>
    <type>DateTime</type>
</CustomField>