cmss/main/default/objects/Case/fields/ResponseSentDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseSentDate__c</fullName>
    <description>Pole obsahující informaci kdy došlo k odeslání odpovědi na podání podávájícímu</description>
    <label>Response Sent Date</label>
    <type>Date</type>
</CustomField>