cmss/main/default/objects/Case/fields/SetInvalidationBan__c.field-meta.xml
<CustomField>
    <fullName>SetInvalidationBan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Při zaškrtnutí se nastavuje příznak pro zákaz zneplatnění</description>
    <label>Set Invalidation Ban</label>
    <type>Checkbox</type>
</CustomField>