cmss/main/default/objects/Case/fields/SignatureVerified__c.field-meta.xml
<CustomField>
    <fullName>SignatureVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Verified</label>
    <type>Checkbox</type>
</CustomField>