cmss/main/default/objects/Case/fields/SolutionPurpose__c.field-meta.xml
<CustomField>
    <fullName>SolutionPurpose__c</fullName>
    <label>Solution Purpose</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>