cmss/main/default/objects/Case/fields/SolverDepartmentNumber__c.field-meta.xml
<CustomField>
    <fullName>SolverDepartmentNumber__c</fullName>
    <defaultValue>$User.Department</defaultValue>
    <description>Číslo útvaru řešitele, automaticky se doplní dle zvoleného řešitele</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Solver Department Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>