cmss/main/default/objects/Case/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Zdroj případu</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>