cmss/main/default/objects/Case/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Adresa podávajícího - ulice</description>
    <inlineHelpText>Pokud vyberete klienta, údaj se doplní automaticky po uložení GDPR podání.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>