cmss/main/default/objects/Case/fields/SubjectFound__c.field-meta.xml
<CustomField>
    <fullName>SubjectFound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subject Found</label>
    <type>Checkbox</type>
</CustomField>