cmss/main/default/objects/Case/fields/SuccessRequestsNumber__c.field-meta.xml
<CustomField>
    <fullName>SuccessRequestsNumber__c</fullName>
    <description>Počet úspěšně dokončených – nápočet pomocí DLRS dle stavu requestů</description>
    <inlineHelpText>Platné k aktuálnímu okamžiku</inlineHelpText>
    <label>Success Requests Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>