cmss/main/default/objects/Case/fields/SuperiorLevel1__c.field-meta.xml
<CustomField>
    <fullName>SuperiorLevel1__c</fullName>
    <description>Jedinečný identifikátor pro entitu Odbytový orgán přidruženou k entitě Odbytový orgán, nejvyšší úroveň hierarchie pro daného usera. Dotahuje se z Usera.</description>
    <formula>Contractor__r.SuperiorLevel1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superior Level 1</label>
    <type>Text</type>
</CustomField>