cmss/main/default/objects/Case/fields/SuperiorLevel2__c.field-meta.xml
<CustomField>
    <fullName>SuperiorLevel2__c</fullName>
    <description>Manažer obchodní sítě - Jedinečný identifikátor pro entitu Odbytový orgán přidruženou k entitě Odbytový orgán.  Dotahuje se z Usera.</description>
    <formula>Contractor__r.SuperiorLevel2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superior Level 2</label>
    <type>Text</type>
</CustomField>