cmss/main/default/objects/Case/fields/SuperiorLevel3__c.field-meta.xml
<CustomField>
    <fullName>SuperiorLevel3__c</fullName>
    <formula>Contractor__r.SuperiorLevel3__r.FirstName + &apos; &apos; + Contractor__r.SuperiorLevel3__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superior Level 3</label>
    <type>Text</type>
</CustomField>