cmss/main/default/objects/Case/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>