cmss/main/default/objects/Case/fields/ThirtyDayPeriodOverReason__c.field-meta.xml
<CustomField>
    <fullName>ThirtyDayPeriodOverReason__c</fullName>
    <description>Zdůvodnění nedodržení 30 dnů</description>
    <label>30day Period Over Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>