cmss/main/default/objects/Case/fields/TotalRequestsNumber__c.field-meta.xml
<CustomField>
    <fullName>TotalRequestsNumber__c</fullName>
    <description>Celkový počet requestů</description>
    <label>Total Requests Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>