cmss/main/default/objects/Case/fields/Type_of_Process__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>