cmss/main/default/objects/Case/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uživatel</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pod_n</relationshipName>
    <type>Lookup</type>
</CustomField>