cmss/main/default/objects/Case/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <formula>TODAY()+30</formula>
    <label>Valid_To</label>
    <type>Date</type>
</CustomField>