cmss/main/default/objects/Case/fields/ValidationsBypass__c.field-meta.xml
<CustomField>
    <fullName>ValidationsBypass__c</fullName>
    <description>You can skip some validations by changing value of this field. You can increment it or (if you don&apos;t know previous value) set to random number.</description>
    <label>Validations Bypass</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>