cmss/main/default/objects/Case/recordTypes/Client_Consolidation.recordType-meta.xml
<RecordType>
    <fullName>Client_Consolidation</fullName>
    <active>true</active>
    <businessProcess>Client Consolidation</businessProcess>
    <label>Client Consolidation</label>
</RecordType>