cmss/main/default/objects/Case/recordTypes/ClientClaim.recordType-meta.xml
<RecordType>
    <fullName>ClientClaim</fullName>
    <active>true</active>
    <businessProcess>Client Claim</businessProcess>
    <description>Record type for Client Claims (complaints, incidents, requests)</description>
    <label>Client Claim</label>
</RecordType>