cmss/main/default/objects/Case/recordTypes/ClientClaimConfirmationSent.recordType-meta.xml
<RecordType>
    <fullName>ClientClaimConfirmationSent</fullName>
    <active>true</active>
    <businessProcess>Client Claim</businessProcess>
    <label>Client Claim Confirmation Sent</label>
</RecordType>