cmss/main/default/objects/Case/recordTypes/ClosedClientClaim.recordType-meta.xml
<RecordType>
    <fullName>ClosedClientClaim</fullName>
    <active>true</active>
    <businessProcess>Client Claim</businessProcess>
    <description>The client claim record type with a non editable layout for closed cases</description>
    <label>Closed Client Claim</label>
</RecordType>