cmss/main/default/objects/Case/recordTypes/ClosedGDPRClaim.recordType-meta.xml
<RecordType>
    <fullName>ClosedGDPRClaim</fullName>
    <active>true</active>
    <businessProcess>Client Claim</businessProcess>
    <description>Record type with read-only fields for closed GDPR claims</description>
    <label>Closed GDPR Claim</label>
</RecordType>