cmss/main/default/objects/Case/recordTypes/GDPR.recordType-meta.xml
<RecordType>
    <fullName>GDPR</fullName>
    <active>true</active>
    <businessProcess>Client Claim</businessProcess>
    <description>GDPR claim</description>
    <label>GDPR</label>
</RecordType>