cmss/main/default/objects/Case/recordTypes/NewClientClaim.recordType-meta.xml
<RecordType>
    <fullName>NewClientClaim</fullName>
    <active>true</active>
    <businessProcess>Client Claim</businessProcess>
    <label>New Client Claim</label>
</RecordType>