cmss/main/default/objects/Case/recordTypes/PCF.recordType-meta.xml
<RecordType>
    <fullName>PCF</fullName>
    <active>true</active>
    <businessProcess>PCF</businessProcess>
    <label>PCF</label>
</RecordType>