cmss/main/default/objects/Case/recordTypes/PortfolioManagementChangeRequest.recordType-meta.xml
<RecordType>
    <fullName>PortfolioManagementChangeRequest</fullName>
    <active>true</active>
    <businessProcess>Portfolio Management Change Request</businessProcess>
    <label>Portfolio Management Change Request</label>
</RecordType>