cmss/main/default/objects/Case/validationRules/AmountRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountRequired</fullName>
    <active>true</active>
    <description>If there is value picked in Accounting Funds Type, CompensationAmount__c field becomes required.</description>
    <errorConditionFormula>$Profile.Name &lt;&gt; &apos;IntegrationUser&apos; &amp;&amp; 
NOT (ISBLANK(TEXT(AccountingFundsType__c))) &amp;&amp;
ISBLANK(CompensationAmount__c)</errorConditionFormula>
    <errorDisplayField>CompensationAmount__c</errorDisplayField>
    <errorMessage>Amount is required if Accounting Funds Type is filled.</errorMessage>
</ValidationRule>